Fixed a vertical align problem in "save & apply" button label.

--- a/src/shared/frames/css/frames.css
+++ b/src/shared/frames/css/frames.css
@@ -96,7 +96,7 @@ body {
 .gpii-pmt-saveAndApplyButtonLabel {
 	cursor: pointer;
     position: relative;
-    vertical-align: middle;
+    vertical-align: sub;
     z-index: 1;
     color: #FFFFFF;
     font-size: 1.2em;
